add the deploy segment for wercker.yml

--- a/wercker.yml
+++ b/wercker.yml
@@ -24,3 +24,11 @@ build:
       version: "0.17"
       theme: blackburn
       flags: --buildDrafts=true
+deploy:
+  steps:
+    - install-packages:
+        packages: git ssh-client
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
+        domain: xiaowing.github.io
+        basedir: public
