--- a/wercker.yml
+++ b/wercker.yml
@@ -30,5 +30,5 @@ deploy:
         packages: git ssh-client
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
-        domain: xiaowing.github.io
+        repo: xiaowing/xiaowing.github.io
         basedir: public
