--- a/wercker.yml
+++ b/wercker.yml
@@ -28,7 +28,9 @@ deploy:
   steps:
     - install-packages:
         packages: git ssh-client
-    - lukevivier/gh-pages@0.2.1:
+    #- lukevivier/gh-pages@0.2.1:
+    - uetchy/gh-pages:
         token: $GIT_TOKEN
         repo: xiaowing/xiaowing.github.io
-        basedir: public
+        domain: xiaowing.github.io
+        path: public
