--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ paginate = 10
   subtitle = "wing's dak"
   brand = "小wing的驿站"
   #googleAnalytics = "Your Google Analytics tracking ID"
-  #disqus = "Your Disqus shortname"
+  disqus = "wingsdak"
   # CSS name for highlight.js
   highlightjs = "androidstudio"
   highlightjs_extra_languages = ["yaml"]
