modify the partial "social" to add the user page of wikipedia, zhihu & douban

--- a/config.toml
+++ b/config.toml
@@ -74,4 +74,7 @@ paginate = 10
   weibo = "u/3304350204"
   instagram = "xiaowing"
   github = "xiaowing"
+  wikipedia = "小wing"
+  zhihu = "xiaowing"
+  douban = "wing0630"
   
