--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,21 @@ paginate = 10
   # (relative to /static folder)
   custom_css = ["css/my.css"]
   custom_js = ["js/my.js"]
+  # gitalk
+  gitalk = "wingsdak's Gitalk"
+
+[Params.Gitalk]
+    clientID = "45937246c62d5c6b1ce5" # Your client ID
+    clientSecret = "cfdfe2d86acacf98686953cf709c631fdab41762" # Your client secret
+    repo = "xiaowing.github.io" # The repo to store comments
+    owner = "xiaowing" # Your GitHub ID
+    admin= "xiaowing" # Required. Github repository owner and collaborators. (Users who having write access to this repository)
+    id= "location.pathname" # The unique id of the page. (this param not used in js)
+    labels= "gitalk" # Github issue labels. If you used to use Gitment, you can change it
+    perPage= 15 # Pagination size, with maximum 100.
+    pagerDirection= "last" # Comment sorting direction, available values are 'last' and 'first'.
+    createIssueManually= false # If it is 'false', it is auto to make a Github issue when the administrators login.
+    distractionFreeMode= false # Enable hot key (cmd|ctrl + enter) submit comment.
 
 [menu]
   # Shown in the side menu.
@@ -71,7 +86,6 @@ paginate = 10
 
   # SNS microblogging
   twitter = "xiaowing"
-  weibo = "u/3304350204"
   instagram = "xiaowing"
   github = "xiaowing"
   wikipedia = "小wing"
